--- a/Smorning/app/src/main/AndroidManifest.xml
+++ b/Smorning/app/src/main/AndroidManifest.xml
@@ -13,10 +13,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Smorning"
         tools:targetApi="31">
+        <activity
+            android:name=".Quiz"
+            android:exported="false" />
+        <activity
+            android:name=".quiz"
+            android:exported="false" />
+
         <service
             android:name=".MyService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
 
         <activity
             android:name=".MainActivity"
