--- a/Smorning/app/src/main/AndroidManifest.xml
+++ b/Smorning/app/src/main/AndroidManifest.xml
@@ -15,24 +15,20 @@
         tools:targetApi="31">
         <activity
             android:name=".Quiz"
+            android:screenOrientation="portrait"
             android:exported="false" />
-        <activity
-            android:name=".quiz"
-            android:exported="false" />
-
-        <service
-            android:name=".MyService"
-            android:enabled="true"
-            android:exported="true" />
 
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".MoreInfoActivity"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".FirstStartActivity"
+            android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
